// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`pack-equipment-icons gamedata resolution should resolve a custom icon path from the gamedata tree 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Starting packing DDS icons file, parallel",
    "System ltx: <sandbox>/custom.ltx",
    "Source icons dir: <sandbox>/icons",
    "Output dir: <sandbox>/with-gamedata.dds",
    "Packed 2 icons in BC3RgbaUnorm format",
    "Saved resulting file with combined icons <sandbox>/with-gamedata.dds",
  ],
}
`;

exports[`pack-equipment-icons gamedata resolution should skip a custom icon path without a gamedata tree 1`] = `
{
  "exitCode": 0,
  "stderr": [
    "Skip icon <sandbox>/../../resources/textures/ui/ui_test_sheet.dds / 'test_icon_custom', reason: IO error: <missing path>",
  ],
  "stdout": [
    "Starting packing DDS icons file, parallel",
    "System ltx: <sandbox>/custom.ltx",
    "Source icons dir: <sandbox>/icons",
    "Output dir: <sandbox>/without-gamedata.dds",
    "Packed 1 icons in BC3RgbaUnorm format",
    "Saved resulting file with combined icons <sandbox>/without-gamedata.dds",
  ],
}
`;

exports[`pack-equipment-icons gamedata resolution should write the expected files 1`] = `
[
  {
    "path": "custom.ltx",
    "sha256": "aad43480c95c21eb6e76fea253dc2352b161e08823353bf49b3dbd762c5b34b0",
    "size": 262,
  },
  {
    "path": "icons/test_icon_a.dds",
    "sha256": "9e5161552c4b164c58eb80afee93cbf36a9083066f8709883bf025769f3c0323",
    "size": 2852,
  },
  {
    "path": "icons/test_icon_b.dds",
    "sha256": "bb4c61c9d620ee98cb690fb5e4daf72beb8bef041534f9e95c379eb998391c48",
    "size": 2852,
  },
  {
    "path": "icons/test_icon_c.dds",
    "sha256": "0ccd5870fc1bf3a9192611c314f927f0076d850a39a9e2419b49a834af4f95f4",
    "size": 2852,
  },
  {
    "path": "icons/test_icon_c_variant.dds",
    "sha256": "0ccd5870fc1bf3a9192611c314f927f0076d850a39a9e2419b49a834af4f95f4",
    "size": 2852,
  },
  {
    "path": "with-gamedata.dds",
    "sha256": "a86a56c9cb305b2b07651f98fb5cd8491eb643e79753518c6e95d5a587b54851",
    "size": 5348,
  },
  {
    "path": "without-gamedata.dds",
    "sha256": "cdfa9ac15f591bd452314cfdb8c79d8e6d89b50c32339387ef34d9461660d4c5",
    "size": 5348,
  },
]
`;
